maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^RandomMouseMaze:15: warning: enclosing method murDroite has result type Unit: return value discarded
    return true
    ^RandomMouseMaze:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^RandomMouseMaze:19: warning: enclosing method murDroite has result type Unit: return value discarded
    return false
    ^RandomMouseMaze:29: error: type mismatch;
 found   : Unit
 required: Boolean
      if(murDroite()) {
                  ^